--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,28 @@
+html, body {
+    height: 100%;
+    text-align: center;
+    text-decoration: none;
+    list-style-type: none;
+}
+
+/* header {
+    display: flex;
+    width: 100%;
+    position: fixed;
+    top: 0;
+}
+*/
+
+.navbar {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+}
+
+
+
 .show {
     display: block;
 }
