--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 html, body {
     height: 100%;
     text-align: center;
-    text-decoration: none;
+    
     list-style-type: none;
 }
 
@@ -19,6 +19,10 @@ html, body {
     width: 100%;
     justify-content: space-between;
     align-items: center;
+}
+
+.navbar a {
+    text-decoration: none;
 }
 
 
