--- a/assets/style.css
+++ b/assets/style.css
@@ -1,7 +1,7 @@
 html, body {
     height: 100%;
+    font-family: 'Space Mono', monospace;
     text-align: center;
-    
     list-style-type: none;
 }
 
@@ -23,6 +23,15 @@ html, body {
 
 .navbar a {
     text-decoration: none;
+    color: #000000
+}
+
+.navbar a:hover {
+    color: #33cc33;
+    background-color: #000000;
+    padding: 5px;
+    border: 2px solid #33cc33;
+    border-radius: 3px;
 }
 
 
