--- a/assets/style.css
+++ b/assets/style.css
@@ -5,13 +5,9 @@ html, body {
     list-style-type: none;
 }
 
-/* header {
-    display: flex;
-    width: 100%;
-    position: fixed;
-    top: 0;
+h1 {
+    font-family: 'Major Mono Display', monospace;
 }
-*/
 
 .navbar {
     display: flex;
